<resources>
    <string name="app_name">LoteriaEntrecanos</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="registrarse">Registrarse</string>
    <string name="descrip_logo">Img de logo EC</string>
    <string name="nombre">Nombre</string>
    <string name="correo">Correo</string>
    <string name="terminos_condiciones">He leído los términos y condiciones</string>
    <string name="desc_logo">Logo</string>
    <string name="password">Contraseña</string>
    <string name="sign_out">Sign Out</string>
    <string name="perfil">Perfil</string>
</resources>
