<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" android:background="@android:color/white">
    <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content" app:srcCompat="@drawable/entrecanos_logo" android:id="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.126"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp" android:contentDescription="@string/descrip_logo"/>
    <Button
            android:text="@string/iniciar_sesion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/boton_iniciar_sesion"
            app:layout_constraintTop_toBottomOf="@+id/imageView" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/rounded_corners_primary"
            android:padding="10dp" android:textColor="@android:color/white"
            app:layout_constraintVertical_bias="0.1" android:textStyle="bold"/>
    <Button
            android:text="@string/registrarse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/boton_registrarse"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/boton_iniciar_sesion" android:layout_marginTop="40dp"
            android:textColor="@android:color/white" android:textStyle="bold"
            android:background="@drawable/rounded_corners_primary" android:padding="10dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>