<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RegistrarActivity" android:background="@android:color/white">

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/texto_nombre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="64dp" android:layout_marginEnd="64dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.37">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:hint="@string/nombre" android:inputType="textPersonName" android:textAllCaps="false"
                android:background="@drawable/rounded_corners_primary_dark_empty" android:padding="10dp"
                android:maxWidth="45dp"
                android:id="@+id/textInputEditText"/>

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/texto_correo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="64dp" android:layout_marginEnd="64dp"
            app:layout_constraintTop_toBottomOf="@+id/texto_nombre" android:layout_marginTop="24dp">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:hint="@string/correo" android:inputType="textPersonName" android:textAllCaps="false"
                android:background="@drawable/rounded_corners_primary_dark_empty" android:padding="10dp"
                android:id="@+id/textInputEditText2"/>

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
            app:endIconMode="password_toggle" android:layout_width="0dp" android:layout_height="wrap_content"
            android:id="@+id/texto_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="64dp" android:layout_marginStart="64dp"
            app:layout_constraintTop_toBottomOf="@+id/texto_correo" android:layout_marginTop="24dp">
        <com.google.android.material.textfield.TextInputEditText
                android:inputType="textPassword"
                android:layout_height="match_parent" android:layout_width="match_parent"
                android:background="@drawable/rounded_corners_primary_dark_empty"
                android:padding="10dp"
                android:id="@+id/textInputEditText3" android:hint="@string/password"/>

    </com.google.android.material.textfield.TextInputLayout>
    <Button
            android:text="@string/registrarse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/boton_registrar"
            android:background="@drawable/rounded_corners_primary_empty"
            android:textColor="@android:color/white" android:padding="20dp" android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxTerminos" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="24dp"/>
    <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="0dp"
            android:foregroundGravity="center_horizontal"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/boton_registrar"
            app:layout_constraintEnd_toEndOf="@+id/boton_registrar"
            app:layout_constraintStart_toStartOf="@+id/boton_registrar" android:layout_marginTop="32dp">
    </com.google.android.gms.common.SignInButton>
    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp" app:srcCompat="@drawable/logo_small" android:id="@+id/imageView3"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="1.0" app:layout_constraintBottom_toTopOf="@+id/texto_nombre"
            app:layout_constraintVertical_bias="0.24000001" android:layout_marginTop="24dp"
            android:layout_marginBottom="32dp" android:contentDescription="@string/desc_logo"/>
    <CheckBox
            android:buttonTint="@color/colorPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/checkBoxTerminos"
            app:layout_constraintEnd_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/texto_password"
            android:layout_marginEnd="8dp" android:layout_marginTop="32dp"/>
    <TextView
            android:text="@string/terminos_condiciones"
            android:layout_width="wrap_content"
            android:layout_height="18dp" android:id="@+id/textView"
            android:textColor="@color/colorPrimary"
            app:layout_constraintTop_toTopOf="@+id/checkBoxTerminos"
            app:layout_constraintBottom_toBottomOf="@+id/checkBoxTerminos" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>