<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".IniciarSesionActivity" android:background="@android:color/white">

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/texto_correo"
            android:layout_width="283dp"
            android:layout_height="wrap_content"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.32999998">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:hint="@string/correo" android:inputType="textPersonName" android:textAllCaps="false"
                android:background="@drawable/rounded_corners_primary_dark_empty" android:padding="10dp"
                android:id="@+id/textInputEditText2"/>

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
            app:endIconMode="password_toggle" android:layout_width="283dp" android:layout_height="wrap_content"
            android:id="@+id/texto_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@+id/texto_correo"
            android:layout_marginTop="8dp">
        <com.google.android.material.textfield.TextInputEditText
                android:inputType="textPassword"
                android:layout_height="match_parent" android:layout_width="match_parent"
                android:background="@drawable/rounded_corners_primary_dark_empty"
                android:padding="10dp"
                android:id="@+id/textInputEditText3" android:hint="@string/password"/>

    </com.google.android.material.textfield.TextInputLayout>
    <Button
            android:text="@string/iniciar_sesion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/boton_iniciar_sesion"
            android:background="@drawable/rounded_corners_primary_empty"
            android:textColor="@android:color/white" android:padding="20dp" android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@+id/texto_password" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="24dp"/>
    <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="118dp"
            android:foregroundGravity="center_horizontal"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/boton_iniciar_sesion" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="16dp">
    </com.google.android.gms.common.SignInButton>
    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp" app:srcCompat="@drawable/logo_small" android:id="@+id/imageView3"
            android:contentDescription="@string/desc_logo"
            android:scaleType="centerInside" app:layout_constraintBottom_toTopOf="@+id/texto_correo"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintVertical_bias="0.0"
            android:padding="16dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>
